@@ -92,6 +92,7 @@ Fixes:
    * Don't manipulate dead memory in Eina_Inlist in elm_transit.c.
    * Remove dummy object from elm_naviframe.
    * Update mapbuf forcely whenever it's states are changed.
+   * Restore dummy object to elm_naviframe. Now, dummy object is always smart member of naviframe.
 
 Removals:
 
