@@ -810,3 +810,7 @@
 2012-12-12  ChunEon Park (Hermet)
 
 	* Update mapbuf forcely whenever it's states are changed.
+
+2012-12-12  WooHyun Jung
+
+	* Restore dummy object to elm_naviframe. Now, dummy object is always smart member of naviframe.
